fixed z-index issues

--- a/app/scss/base/_typography.scss
+++ b/app/scss/base/_typography.scss
@@ -159,7 +159,7 @@ small {
       position: absolute;
       left: 5px;
       top: -2px;
-      z-index: 99;
+      z-index: 1;
       width: 100%;
       height: 25px;
       background-repeat: no-repeat;
