--- a/app/scss/components/_subnav.scss
+++ b/app/scss/components/_subnav.scss
@@ -2,7 +2,7 @@
 
 .subnav {
   position: sticky;
-  z-index: 9999;
+  z-index: 99;
   top: 72px;
   max-width: 100%;
   padding: 0.75rem 2rem;
